Ai chat added. 1. Day/Night themes configurated 2. Icons changed. 3. Polished themes and styles. 4. Switched back to BottomNavigationBar 5. Now chat is saved to local db and history is shown after restart (last 7 days). 6. Progress bar added. Implemented in Main Activity, all the fragments can use it via BehaviorSubject.

--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -11,7 +11,7 @@
         android:id="@+id/container_answer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingTop="@dimen/medium_padding"
+        android:padding="@dimen/medium_padding"
         android:contentDescription="@string/ai_chat_hint"
         app:layout_constraintBottom_toTopOf="@+id/container_question"
         app:layout_constraintTop_toTopOf="parent">
@@ -42,7 +42,7 @@
             android:background="@color/background1"
             android:hint="@string/ai_chat_hint"
             android:imeOptions="actionSend"
-            android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
+            android:inputType="textMultiLine"
             android:maxLines="5"
             android:padding="@dimen/medium_padding"
             android:scrollbars="none"
