--- a/app/src/main/res/layout/chat_in_item.xml
+++ b/app/src/main/res/layout/chat_in_item.xml
@@ -3,10 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingTop="@dimen/medium_padding" >
 
     <TextView
-        android:id="@+id/incoming_message"
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="@dimen/small_text" />
+
+    <TextView
+        android:id="@+id/message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_in_bubble"
@@ -15,12 +24,18 @@
         android:paddingTop="@dimen/small_padding"
         android:paddingEnd="@dimen/medium_padding"
         android:paddingBottom="@dimen/medium_padding"
-        android:layout_marginTop="@dimen/small_padding"
-        android:layout_marginBottom="@dimen/small_padding"
         android:textSize="@dimen/big_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name"
         app:layout_constraintWidth_max="wrap"
         app:layout_constraintWidth_percent="0.8" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/message"
+        app:layout_constraintEnd_toEndOf="@+id/message"
+        android:textSize="@dimen/tiny_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
