--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="small_text">11sp</dimen>
+    <dimen name="small_text">12sp</dimen>
     <dimen name="medium_text">14sp</dimen>
     <dimen name="big_text">16sp</dimen>
     <dimen name="corner_radius">15dp</dimen>
@@ -9,4 +9,5 @@
     <dimen name="small_padding">6dp</dimen>
     <dimen name="medium_padding">12dp</dimen>
     <dimen name="big_padding">24dp</dimen>
+    <dimen name="tiny_text">10sp</dimen>
 </resources>
